[gd_scene load_steps=13 format=3 uid="uid://cgq7n1figlpu3"]

[ext_resource type="Script" path="res://godot_ap/ui/console_window_container.gd" id="1_gj1xe"]
[ext_resource type="PackedScene" uid="uid://c51q4vrwhlcl7" path="res://godot_ap/ui/console_tab.tscn" id="2_704wl"]
[ext_resource type="Script" path="res://godot_ap/ui/slider_box.gd" id="3_1ho76"]
[ext_resource type="Script" path="res://godot_ap/ui/hints_tab.gd" id="3_iwodb"]
[ext_resource type="Script" path="res://godot_ap/ui/typing_bar.gd" id="4_3ue4b"]
[ext_resource type="Script" path="res://godot_ap/ui/connect_box.gd" id="4_yf1mw"]
[ext_resource type="SystemFont" uid="uid://73rjoc23d4ub" path="res://godot_ap/ui/console_font.tres" id="5_wdwfc"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_rud5c"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5222u"]
bg_color = Color(0.231373, 0.231373, 0.231373, 1)

[sub_resource type="LabelSettings" id="LabelSettings_w2j8w"]
font = ExtResource("5_wdwfc")
font_size = 40

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_sal5b"]

[sub_resource type="LabelSettings" id="LabelSettings_8fs71"]
font = ExtResource("5_wdwfc")
font_size = 20
font_color = Color(1, 0.443684, 0.375096, 1)
outline_size = 6
outline_color = Color(0, 0, 0, 1)

[node name="WindowContainer" type="MarginContainer"]
custom_minimum_size = Vector2(1366, 745)
offset_right = 1366.0
offset_bottom = 745.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 0
theme_override_constants/margin_bottom = 0
script = ExtResource("1_gj1xe")

[node name="BG" type="ColorRect" parent="."]
layout_mode = 2
color = Color(0.231373, 0.231373, 0.231373, 1)

[node name="Tabs" type="TabContainer" parent="."]
custom_minimum_size = Vector2(1366, 745)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_rud5c")
theme_override_styles/tabbar_background = SubResource("StyleBoxFlat_5222u")
tab_focus_mode = 0

[node name="Console" type="MarginContainer" parent="Tabs"]
layout_mode = 2
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 0
theme_override_constants/margin_bottom = 0

[node name="Console" parent="Tabs/Console" instance=ExtResource("2_704wl")]
layout_mode = 2
theme_override_constants/separation = 0

[node name="ConnectBox" type="MarginContainer" parent="Tabs/Console"]
clip_contents = true
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
mouse_filter = 2
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 0
theme_override_constants/margin_bottom = 0
script = ExtResource("3_1ho76")

[node name="Row" type="HBoxContainer" parent="Tabs/Console/ConnectBox"]
clip_contents = true
layout_mode = 2
mouse_filter = 2

[node name="Handle" type="MarginContainer" parent="Tabs/Console/ConnectBox/Row"]
clip_contents = true
layout_mode = 2
size_flags_vertical = 0
mouse_filter = 0
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 0
theme_override_constants/margin_bottom = 0

[node name="BG" type="ColorRect" parent="Tabs/Console/ConnectBox/Row/Handle"]
layout_mode = 2
mouse_filter = 1
color = Color(0.231373, 0.231373, 0.231373, 1)

[node name="Margin" type="MarginContainer" parent="Tabs/Console/ConnectBox/Row/Handle"]
layout_mode = 2
theme_override_constants/margin_left = 2
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 2
theme_override_constants/margin_bottom = 0

[node name="Label" type="Label" parent="Tabs/Console/ConnectBox/Row/Handle/Margin"]
layout_mode = 2
size_flags_vertical = 0
mouse_filter = 1
text = "ðŸž€"
label_settings = SubResource("LabelSettings_w2j8w")

[node name="Box" type="MarginContainer" parent="Tabs/Console/ConnectBox/Row"]
clip_contents = true
layout_mode = 2
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 0
theme_override_constants/margin_bottom = 0

[node name="BG" type="ColorRect" parent="Tabs/Console/ConnectBox/Row/Box"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 1
color = Color(0.231373, 0.231373, 0.231373, 1)

[node name="Margins" type="MarginContainer" parent="Tabs/Console/ConnectBox/Row/Box"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="VBox" type="VBoxContainer" parent="Tabs/Console/ConnectBox/Row/Box/Margins"]
layout_mode = 2

[node name="Content" type="GridContainer" parent="Tabs/Console/ConnectBox/Row/Box/Margins/VBox"]
layout_mode = 2
theme_override_constants/v_separation = 8
columns = 2
script = ExtResource("4_yf1mw")

[node name="Label" type="Label" parent="Tabs/Console/ConnectBox/Row/Box/Margins/VBox/Content"]
layout_mode = 2
text = "IP:"
horizontal_alignment = 2

[node name="IP_Box" type="Control" parent="Tabs/Console/ConnectBox/Row/Box/Margins/VBox/Content"]
custom_minimum_size = Vector2(200, 33)
layout_mode = 2
size_flags_horizontal = 3
focus_neighbor_top = NodePath("../Pwd_Box")
focus_neighbor_bottom = NodePath("../Port_Box")
focus_next = NodePath("../Port_Box")
focus_previous = NodePath("../Pwd_Box")
focus_mode = 2
script = ExtResource("4_3ue4b")
font = ExtResource("5_wdwfc")
color_bg = Color(0, 0, 0, 1)
color_dis_bg = Color(0.314316, 0.314316, 0.314316, 1)
clear_text_on_send = false
store_history = false

[node name="Label2" type="Label" parent="Tabs/Console/ConnectBox/Row/Box/Margins/VBox/Content"]
layout_mode = 2
text = "Port:"
horizontal_alignment = 2

[node name="Port_Box" type="Control" parent="Tabs/Console/ConnectBox/Row/Box/Margins/VBox/Content"]
custom_minimum_size = Vector2(0, 33)
layout_mode = 2
size_flags_horizontal = 3
focus_neighbor_top = NodePath("../IP_Box")
focus_neighbor_bottom = NodePath("../Slot_Box")
focus_next = NodePath("../Slot_Box")
focus_previous = NodePath("../IP_Box")
focus_mode = 2
script = ExtResource("4_3ue4b")
font = ExtResource("5_wdwfc")
color_bg = Color(0, 0, 0, 1)
color_dis_bg = Color(0.314316, 0.314316, 0.314316, 1)
clear_text_on_send = false
store_history = false

[node name="Label3" type="Label" parent="Tabs/Console/ConnectBox/Row/Box/Margins/VBox/Content"]
layout_mode = 2
text = "Slot:"
horizontal_alignment = 2

[node name="Slot_Box" type="Control" parent="Tabs/Console/ConnectBox/Row/Box/Margins/VBox/Content"]
custom_minimum_size = Vector2(0, 33)
layout_mode = 2
size_flags_horizontal = 3
focus_neighbor_top = NodePath("../Port_Box")
focus_neighbor_bottom = NodePath("../Pwd_Box")
focus_next = NodePath("../Pwd_Box")
focus_previous = NodePath("../Port_Box")
focus_mode = 2
script = ExtResource("4_3ue4b")
font = ExtResource("5_wdwfc")
color_bg = Color(0, 0, 0, 1)
color_dis_bg = Color(0.314316, 0.314316, 0.314316, 1)
clear_text_on_send = false
store_history = false

[node name="HBox" type="HBoxContainer" parent="Tabs/Console/ConnectBox/Row/Box/Margins/VBox/Content"]
layout_mode = 2

[node name="ShowPwd" type="CheckBox" parent="Tabs/Console/ConnectBox/Row/Box/Margins/VBox/Content/HBox"]
layout_mode = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_sal5b")

[node name="Label4" type="Label" parent="Tabs/Console/ConnectBox/Row/Box/Margins/VBox/Content/HBox"]
layout_mode = 2
text = "Passwd:"
horizontal_alignment = 2

[node name="Pwd_Box" type="Control" parent="Tabs/Console/ConnectBox/Row/Box/Margins/VBox/Content"]
custom_minimum_size = Vector2(0, 33)
layout_mode = 2
size_flags_horizontal = 3
focus_neighbor_top = NodePath("../Slot_Box")
focus_neighbor_bottom = NodePath("../IP_Box")
focus_next = NodePath("../IP_Box")
focus_previous = NodePath("../Slot_Box")
focus_mode = 2
script = ExtResource("4_3ue4b")
font = ExtResource("5_wdwfc")
color_bg = Color(0, 0, 0, 1)
color_dis_bg = Color(0.314316, 0.314316, 0.314316, 1)
clear_text_on_send = false
store_history = false
pwd_mode = true

[node name="_nil" type="Control" parent="Tabs/Console/ConnectBox/Row/Box/Margins/VBox/Content"]
layout_mode = 2

[node name="ErrorLabel" type="Label" parent="Tabs/Console/ConnectBox/Row/Box/Margins/VBox/Content"]
layout_mode = 2
label_settings = SubResource("LabelSettings_8fs71")

[node name="ButtonRow" type="HBoxContainer" parent="Tabs/Console/ConnectBox/Row/Box/Margins/VBox"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 3

[node name="ConnectBtn" type="Button" parent="Tabs/Console/ConnectBox/Row/Box/Margins/VBox/ButtonRow"]
layout_mode = 2
size_flags_horizontal = 2
text = "Connect"

[node name="DisconnectBtn" type="Button" parent="Tabs/Console/ConnectBox/Row/Box/Margins/VBox/ButtonRow"]
layout_mode = 2
size_flags_horizontal = 10
disabled = true
text = "Disconnect"

[node name="Hints" type="MarginContainer" parent="Tabs"]
visible = false
layout_mode = 2
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 0
theme_override_constants/margin_bottom = 0
script = ExtResource("3_iwodb")

[node name="Console" parent="Tabs/Hints" instance=ExtResource("2_704wl")]
layout_mode = 2
size_flags_vertical = 3

[node name="TypingBar" parent="Tabs/Hints/Console" index="1"]
visible = false

[connection signal="send_text" from="Tabs/Console/ConnectBox/Row/Box/Margins/VBox/Content/IP_Box" to="Tabs/Console/ConnectBox/Row/Box/Margins/VBox/Content" method="try_connection" unbinds=1]
[connection signal="send_text" from="Tabs/Console/ConnectBox/Row/Box/Margins/VBox/Content/Port_Box" to="Tabs/Console/ConnectBox/Row/Box/Margins/VBox/Content" method="try_connection" unbinds=1]
[connection signal="send_text" from="Tabs/Console/ConnectBox/Row/Box/Margins/VBox/Content/Slot_Box" to="Tabs/Console/ConnectBox/Row/Box/Margins/VBox/Content" method="try_connection" unbinds=1]
[connection signal="toggled" from="Tabs/Console/ConnectBox/Row/Box/Margins/VBox/Content/HBox/ShowPwd" to="Tabs/Console/ConnectBox/Row/Box/Margins/VBox/Content/Pwd_Box" method="set_show_pwd"]
[connection signal="send_text" from="Tabs/Console/ConnectBox/Row/Box/Margins/VBox/Content/Pwd_Box" to="Tabs/Console/ConnectBox/Row/Box/Margins/VBox/Content" method="try_connection" unbinds=1]
[connection signal="pressed" from="Tabs/Console/ConnectBox/Row/Box/Margins/VBox/ButtonRow/ConnectBtn" to="Tabs/Console/ConnectBox/Row/Box/Margins/VBox/Content" method="try_connection"]
[connection signal="pressed" from="Tabs/Console/ConnectBox/Row/Box/Margins/VBox/ButtonRow/DisconnectBtn" to="Tabs/Console/ConnectBox/Row/Box/Margins/VBox/Content" method="kill_connection"]

[editable path="Tabs/Hints/Console"]
